--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#28282B"
     android:orientation="vertical"
@@ -8,10 +7,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/search_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search"
+        android:text="@string/search"
         android:textSize="60sp"
         android:textColor="#f5f5f5"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -19,11 +18,15 @@
         android:layout_marginStart="5dp"/>
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/item_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:inputType="textLongMessage"
-        android:text="Name"
-        />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/input_text_box"
+        android:textHint="Search by keyword or phrase"
+        android:textColorHint="#f5f5f5"
+        app:layout_constraintTop_toBottomOf="@id/search_text"
+        android:textColor="#f5f5f5"
+        android:textSize="40sp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
