--- a/app/src/main/res/layout/item_questions.xml
+++ b/app/src/main/res/layout/item_questions.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="30sp"
         android:textColor="#f5f5f5"
-        android:text="What is your name?"
+        android:text="@string/question"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"/>
 
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@id/item_question"
         android:textSize="20sp"
         android:textColor="#f5f5f5"
-        android:text="Akshay Khare"
+        android:text="@string/name"
         android:layout_marginStart="5dp"/>
 
 
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toBottomOf="@id/item_name"
         android:textSize="18sp"
         android:textColor="#f5f5f5"
-        android:text="101k"
+        android:text="@string/no_of_followers"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"/>
 
@@ -85,18 +85,8 @@
         app:layout_constraintTop_toBottomOf="@id/item_name"
         android:textSize="20sp"
         android:textColor="#f5f5f5"
-        android:text="354"
+        android:text="@string/no_of_answers"
         android:layout_marginStart="5dp"/>
 
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/item_followers"-->
-<!--        android:textSize="20sp"-->
-<!--        android:textAlignment="center"-->
-<!--        android:text="-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;"-->
-<!--        android:textColor="#808b96"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
