--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#28282B"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -28,5 +29,65 @@
         android:textColorHint="#f5f5f5"
         app:layout_constraintTop_toBottomOf="@id/search_text"
         android:textColor="#f5f5f5"
-        android:textSize="40sp"/>
+        android:textSize="40sp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:autofillHints=""
+        android:gravity="center_vertical"/>
+
+    <TextView
+        android:id="@+id/item_add_filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/item_search"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="@string/add_filters"
+        android:textSize="30sp"
+        android:textColor="#f5f5f5"
+        android:background="@drawable/rounded_corner"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"/>
+
+    <TextView
+        android:id="@+id/popular_tags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/popular_tags"
+        android:textSize="35sp"
+        android:layout_marginTop="40dp"
+        android:textColor="#f5f5f5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_add_filter"
+        android:layout_marginStart="5dp"/>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/popular_tags"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="50dp"
+        android:gravity="center">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"/>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
