--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,11 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/search"
-        android:textSize="60sp"
+        android:textStyle="bold"
+        android:textSize="50sp"
         android:textColor="#f5f5f5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="5dp"/>
+        android:layout_marginStart="15dp"/>
 
     <EditText
         android:id="@+id/item_search"
@@ -30,8 +31,8 @@
         app:layout_constraintTop_toBottomOf="@id/search_text"
         android:textColor="#f5f5f5"
         android:textSize="40sp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:autofillHints=""
         android:gravity="center_vertical"/>
 
@@ -46,9 +47,18 @@
         android:textColor="#f5f5f5"
         android:background="@drawable/rounded_corner"
         android:layout_marginTop="25dp"
-        android:layout_marginStart="5dp"
-        android:paddingStart="10dp"
+        android:layout_marginStart="15dp"
+        android:paddingStart="60dp"
         android:paddingEnd="10dp"/>
+
+    <ImageView
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        app:layout_constraintTop_toBottomOf="@id/item_search"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/add_symbol"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="18dp" />
 
     <TextView
         android:id="@+id/popular_tags"
@@ -60,7 +70,7 @@
         android:textColor="#f5f5f5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_add_filter"
-        android:layout_marginStart="5dp"/>
+        android:layout_marginStart="15dp"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -71,23 +81,159 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="150dp"
         android:gravity="center">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello1"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello345"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello4353"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"/>
+
+        </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello43244"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello32"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello2"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello323"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"/>
+
+        </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:text="hello"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:padding="10dp"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
