--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -6,12 +6,39 @@
     android:background="#28282B"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <TextView
+        android:id="@+id/question"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/questions"
+        android:textStyle="bold"
+        android:textSize="50sp"
+        android:textColor="#f5f5f5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="15dp"/>
+
+
+    <TextView
+        android:id="@+id/filter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/question"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="@string/filter"
+        android:textSize="20sp"
+        android:textColor="#f5f5f5"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="15dp" />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/filter"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
