--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -93,61 +93,66 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello0"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello1"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello12"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello123"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello1234"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"/>
 
         </LinearLayout>
 
@@ -161,61 +166,71 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello12345"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello123456"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello345"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
                 android:layout_marginBottom="10dp"
-                android:textAlignment="center"
-                android:layout_weight="1"/>
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
 
         </LinearLayout>
 
@@ -229,61 +244,66 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello123"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
-                android:textAlignment="center"
+                android:gravity="center"
                 android:layout_marginBottom="10dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:layout_marginEnd="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
-                android:textAlignment="center"
+                android:gravity="center"
                 android:layout_marginBottom="10dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:layout_marginEnd="8dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
-                android:textAlignment="center"
+                android:gravity="center"
                 android:layout_marginBottom="10dp"
-                android:layout_weight="1"/>
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:text="hello"
-                android:textColor="#f5f5f5"
-                android:background="@drawable/rounded_corner"
-                android:textAlignment="center"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="1"/>
-
+                android:layout_weight="1"
+                android:layout_marginEnd="8dp"/>
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:text="hello"
                 android:textColor="#f5f5f5"
                 android:background="@drawable/rounded_corner"
-                android:textAlignment="center"
+                android:gravity="center"
                 android:layout_marginBottom="10dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:layout_marginEnd="8dp"/>
+
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="hello"
+                android:textColor="#f5f5f5"
+                android:background="@drawable/rounded_corner"
+                android:gravity="center"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="8dp"/>
 
         </LinearLayout>
     </LinearLayout>
