--- a/app/src/main/res/layout/item_questions.xml
+++ b/app/src/main/res/layout/item_questions.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textColor="#f5f5f5"
         android:text="@string/question"
         android:layout_marginStart="5dp"
@@ -24,13 +24,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_question"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
         app:cardCornerRadius="60dp">
 
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:scaleType="centerCrop"
-            android:contentDescription="@string/profile_pic"/>
+            android:contentDescription="@string/profile_pic" />
 
     </androidx.cardview.widget.CardView>
 
@@ -44,11 +45,12 @@
         android:textSize="20sp"
         android:textColor="#f5f5f5"
         android:text="@string/name"
-        android:layout_marginStart="5dp"/>
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"/>
 
 
     <TextView
-        android:id="@+id/item_followers"
+        android:id="@+id/item_votes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/item_image"
