--- a/app/src/main/res/layout/question_detail.xml
+++ b/app/src/main/res/layout/question_detail.xml
@@ -1,6 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#28282b"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <TextView
+        android:id="@+id/item_question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="30sp"
+        android:textColor="#f5f5f5"
+        android:text="@string/question"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/item_question_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/item_question"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="25sp"
+        android:textColor="#f5f5f5"
+        android:text="@string/question_description"
+        android:layout_marginStart="5dp"/>
+
+    <TextView
+        android:id="@+id/tag1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="hello"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_question_desc"
+        android:textColor="#f5f5f5"
+        android:background="@drawable/rounded_corner"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:padding="10dp"/>
+
+    <TextView
+        android:id="@+id/tag2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="hello"
+        app:layout_constraintLeft_toRightOf="@id/tag1"
+        app:layout_constraintTop_toBottomOf="@id/item_question_desc"
+        android:textColor="#f5f5f5"
+        android:background="@drawable/rounded_corner"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_marginStart="10dp"
+        android:padding="10dp"/>
+
+    <TextView
+        android:id="@+id/tag3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="hello"
+        app:layout_constraintLeft_toRightOf="@id/tag2"
+        app:layout_constraintTop_toBottomOf="@id/item_question_desc"
+        android:textColor="#f5f5f5"
+        android:background="@drawable/rounded_corner"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_marginStart="10dp"
+        android:padding="10dp"/>
+
+    <TextView
+        android:id="@+id/tag4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="hello"
+        app:layout_constraintLeft_toRightOf="@id/tag3"
+        app:layout_constraintTop_toBottomOf="@id/item_question_desc"
+        android:textColor="#f5f5f5"
+        android:background="@drawable/rounded_corner"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_marginStart="10dp"
+        android:padding="10dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
