--- a/app/src/main/res/layout/question_detail.xml
+++ b/app/src/main/res/layout/question_detail.xml
@@ -103,8 +103,9 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:contentDescription="@string/profile_pic"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_pic"
+            android:contentDescription="@string/profile_pic"/>
 
     </androidx.cardview.widget.CardView>
 
@@ -214,6 +215,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_upvote"
+        android:text="@string/answers"
+        android:textSize="30sp"
+        android:layout_marginTop="50dp"
+        android:textStyle="bold"
+        android:textColor="#f5f5f5"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
